--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <title>Bella Ciao</title>
 </head>
+<link rel="icon" href="logo.png">
 <div id="navbar-background">
     <div class="dot"></div>
     <div class="dot"></div>
@@ -153,9 +154,9 @@
     <div id="credit">
         <h3>Made with ❤️ by Siddhant Gupta</h3>
         <div class="social-links">
-            <a href="https://www.linkedin.com/in/siddhant-gupta-a2809024b/" target="_blank"><h6>LinkedIn</h6></a>
-            <a href="https://instagram.com/sg34576?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==" target="_blank"><h6>Instagram</h6></a>
-            <a href="https://github.com/sid346184/" target="_blank"><h6>GitHub</h6></a>
+            <a href="https://www.linkedin.com/in/siddhant-gupta-a2809024b/" target="_blank"><img src="linkedin-logo.png" alt="linkedin-logo"></a>
+            <a href="https://instagram.com/sg34576?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==" target="_blank"><img src="instagram-logo.png" alt="linkedin-logo"></a>
+            <a href="https://github.com/sid346184/" target="_blank"><img src="github-logo.png" alt="github-logo"></a>
         </div>
     </div>
 </html>
