--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <title>Bella Ciao</title>
 </head>
-<link rel="icon" href="logo.png">
+<link rel="icon" href="transparent-logo (1).png">
 <div id="navbar-background">
     <div class="dot"></div>
     <div class="dot"></div>
